# egoexo-wam

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
tests/: test_wam_mvp.py
wam/: README.md  __init__.py  eval.py  export_predictions.py  metrics.py  train.py  utils.py
wam/configs/: wam_base.yaml  wam_ego_exo_teacher.yaml  wam_mlp_last_frame.yaml
wam/data/: __init__.py  audit_fact_wam_labels.py  build_fact_wam_labels.py  fact_wam_dataset.py  synthetic_wam.py
wam/losses/: __init__.py  wam_losses.py
wam/models/: __init__.py  ego_only_wam.py
