[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "egoexo-wam"
version = "0.1.0"
description = "Feature-level Ego-only WAM MVP for FACT token predictability validation"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PyYAML",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wam*"]
